fix int type of frame tick, add VS support

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,11 +1,15 @@
 cmake_minimum_required(VERSION 3.5)
 project(MineSweeper)
 
-set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -std=gnu99 -D_REENTRANT")
+set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -D_REENTRANT")
+if(NOT MSVC)
+    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -std=gnu99")
+endif()
+set(LIBRARIES "SDL2" "SDL2_image" "SDL2_ttf" "SDL2_mixer")
+
 if (CMAKE_BUILD_TYPE STREQUAL "Debug")
     set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Ddebug")
 endif ()
-set(LIBRARIES "-lSDL2 -lSDL2_image -lSDL2_ttf -lSDL2_mixer")
 
 if (MINGW)
     # Assume library files are downloaded in ./lib/ folder
@@ -25,27 +29,56 @@ if (MINGW)
     link_directories("${SDL2_TTF_DIR}/lib")
     link_directories("${SDL2_MIXER_DIR}/lib")
 
-    set(LIBRARIES "-lmingw32 -lSDL2main ${LIBRARIES}")
-    if (NOT CMAKE_BUILD_TYPE STREQUAL "Debug")
-        set(LIBRARIES "${LIBRARIES} -mwindows")
-    endif ()
+    list(INSERT LIBRARIES 0 "mingw32" "SDL2main")
+endif ()
+
+if (MSVC)
+    # Assume library files are downloaded in ./lib/ folder
+    set(SDL2_ARCH "x86")
+    set(SDL2_DIR "${CMAKE_SOURCE_DIR}/lib/SDL2-2.0.4")
+    set(SDL2_IMAGE_DIR "${CMAKE_SOURCE_DIR}/lib/SDL2_image-2.0.1")
+    set(SDL2_TTF_DIR "${CMAKE_SOURCE_DIR}/lib/SDL2_ttf-2.0.14")
+    set(SDL2_MIXER_DIR "${CMAKE_SOURCE_DIR}/lib/SDL2_mixer-2.0.1")
+
+    include_directories(${SDL2_DIR}/include)
+    include_directories(${SDL2_IMAGE_DIR}/include)
+    include_directories(${SDL2_TTF_DIR}/include)
+    include_directories(${SDL2_MIXER_DIR}/include)
+
+    link_directories("${SDL2_DIR}/lib/${SDL2_ARCH}")
+    link_directories("${SDL2_IMAGE_DIR}/lib/${SDL2_ARCH}")
+    link_directories("${SDL2_TTF_DIR}/lib/${SDL2_ARCH}")
+    link_directories("${SDL2_MIXER_DIR}/lib/${SDL2_ARCH}")
+
+    list(INSERT LIBRARIES 0 "SDL2main")
 endif ()
 
 set(SOURCE_FILES src/main.c src/model.c)
-add_executable(MineSweeper ${SOURCE_FILES})
+add_executable(${PROJECT_NAME} WIN32 ${SOURCE_FILES})
 target_link_libraries(${PROJECT_NAME} ${LIBRARIES})
 
+file(GLOB RES_FILES "${CMAKE_SOURCE_DIR}/res/*.*")
 add_custom_command(TARGET ${PROJECT_NAME} POST_BUILD
-        COMMAND ${CMAKE_COMMAND} -E copy_directory
-        "${CMAKE_SOURCE_DIR}/res/"
-        $<TARGET_FILE_DIR:${PROJECT_NAME}>/res/)
+        COMMAND ${CMAKE_COMMAND} -E make_directory $<TARGET_FILE_DIR:${PROJECT_NAME}>/res/)
+add_custom_command(TARGET ${PROJECT_NAME} POST_BUILD
+        COMMAND ${CMAKE_COMMAND} -E copy_if_different ${RES_FILES} $<TARGET_FILE_DIR:${PROJECT_NAME}>/res/)
 
 if (MINGW)
+    file(GLOB DLL_Files
+            "${SDL2_DIR}/bin/*.dll"
+            "${SDL2_IMAGE_DIR}/bin/*.dll"
+            "${SDL2_TTF_DIR}/bin/*.dll"
+            "${SDL2_MIXER_DIR}/bin/*.dll")
     add_custom_command(TARGET ${PROJECT_NAME} POST_BUILD
-            COMMAND ${CMAKE_COMMAND} -E copy_directory
-            "${SDL2_DIR}/bin/"
-            "${SDL2_IMAGE_DIR}/bin/"
-            "${SDL2_TTF_DIR}/bin/"
-            "${SDL2_MIXER_DIR}/bin/"
-            $<TARGET_FILE_DIR:${PROJECT_NAME}>)
+            COMMAND ${CMAKE_COMMAND} -E copy_if_different ${DLL_Files} $<TARGET_FILE_DIR:${PROJECT_NAME}>)
+endif ()
+
+if (MSVC)
+    file(GLOB DLL_Files
+            "${SDL2_DIR}/lib/${SDL2_ARCH}/*.dll"
+            "${SDL2_IMAGE_DIR}/lib/${SDL2_ARCH}/*.dll"
+            "${SDL2_TTF_DIR}/lib/${SDL2_ARCH}/*.dll"
+            "${SDL2_MIXER_DIR}/lib/${SDL2_ARCH}/*.dll")
+    add_custom_command(TARGET ${PROJECT_NAME} POST_BUILD
+            COMMAND ${CMAKE_COMMAND} -E copy_if_different ${DLL_Files} $<TARGET_FILE_DIR:${PROJECT_NAME}>)
 endif ()
